--- a/team/templates/team/index.html
+++ b/team/templates/team/index.html
@@ -5,14 +5,16 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'team/css/style.css' %}" />
 
-<h1> Meet the Team </h1>
+<div class="page-header">
+  <h1> MEET THE TEAM </h1>
+</div>
 
 {% if members %}
-    <div class = "member-card-grid p-2">
+    <div class = "member-card-grid">
 
     {% for member in members %}
 
-    <div class = "card mw-25 mh-25 text-center p-2 m-2">
+    <div class = "card mw-25 mh-25 text-center p-1 m-2">
           {% if member.photo %} <img class = "member-photo" src = "/team{{ member.photo.url }}">
           {% else %} <img class = "card-img-top member-photo" src = "{% static 'team/images/cone_of_shame.jpg' %}"/> {% endif %}
           <div class = "card-body">
