contact page updates

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,10 +23,24 @@ h1, h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: 300;
   color: #222;
+  letter-spacing: 0.05em;
 }
 
 h1 {
   font-size: 3em;
+}
+
+.btn-primary {
+  border: none;
+  background-color: #424242;
+}
+
+textarea, input {
+  border: 1px solid gray;
+}
+
+textarea:focus, input:focus {
+  outline: none;
 }
 
 /*** Nav Bar ***/
