--- a/team/static/team/css/style.css
+++ b/team/static/team/css/style.css
@@ -7,8 +7,8 @@ Light Gray: #CECECE
 */
 
 .page-header {
-  background-image: url(../images/Test2.jpg);
-  background-position: center;
+  /*background-image: url(../images/Test2.jpg);
+  background-position: center;*/
   padding: 1em;
 }
 
