--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 
   <header class="p-1">
     <a class="logo p-2" href="/"><img src="{% static 'images/cal_figure_skating_gold_horizontal.png'%}" width="250px"></a>
