--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,27 +2,47 @@
 
 {% block content %}
 
-  <h1> CONTACT US </h1>
-
-  <!-- Begin Mailchimp Signup Form -->
+{% load static %}
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<div id="mc_embed_signup">
-<form action="https://berkeley.us19.list-manage.com/subscribe/post?u=1095e39c874aef42e64b1a440&amp;id=f112c1208a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to our mailing list</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1095e39c874aef42e64b1a440_f112c1208a" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
+<link rel="stylesheet" type="text/css" href="{%static 'css/contact.css' %}" />
 
-<!--End mc_embed_signup-->
+<h1> CONTACT US </h1>
+
+<div class="container">
+<div class="form-grid">
+
+  <!-- Contact Form -->
+  <form class="contact-form" method="post">
+    <h4> Contact Us </h4>
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class = "btn btn-primary" type="submit" value="Send"/>
+  </form>
+
+  <!-- Mailchimp Signup Form -->
+  <div id="mc_embed_signup">
+    <form action="https://berkeley.us19.list-manage.com/subscribe/post?u=1095e39c874aef42e64b1a440&amp;id=f112c1208a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+	         <h4>Join our Mailing List</h4>
+	         <input class="email" id="subscribe-input" type="email" value="" name="EMAIL" placeholder="email address" required>
+
+          <!-- To prevent bot signups - do not remove-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1095e39c874aef42e64b1a440_f112c1208a" tabindex="-1" value=""></div>
+
+          <input class="btn btn-primary" type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe">
+      </div>
+    </form>
+  </div>
+
+  <!-- Donate -->
+  <div class="donate">
+    <h4> Donate </h4>
+    <p> Cal Figure Skating is an entirely student-run and student-funded organization.
+      We greatly appreciate your support! </p>
+    <a href="https://give.berkeley.edu/egiving/index.cfm?Fund=FU1139000" class="btn btn-primary">Donate</a>
+  </div>
+
+</div>
+</div>
 
 {% endblock %}
