--- a/static/css/join.css
+++ b/static/css/join.css
@@ -4,4 +4,19 @@
 
 .card {
   background: gray;
+  text-align: center;
+  padding: 1em;
+}
+
+.card-title {
+  margin-bottom: 1em;
+}
+
+.card-subtitle {
+  font-weight: bold;
+  margin-bottom: 0.5em;
+}
+
+.btn {
+  margin: 1em;
 }
