--- a/templates/join.html
+++ b/templates/join.html
@@ -4,27 +4,23 @@
 <link rel="stylesheet" type="text/css" href="{%static 'css/join.css' %}" />
 
   <h1> JOIN US </h1>
-  <div class="row grid row-eq-height">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">REC TEAM</h3>
-          <p class="card-subtitle">No experience necessary!</p>
-          <p class="card-text">
+  <div class="card-deck">
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">REC TEAM</h3>
+        <p class="card-subtitle">No experience necessary!</p>
+        <p class="card-text">
             Whether you’re learning to skate for the first time, looking to improve your skills,
             or just want to stay involved in the sport, rec team is the place for you.</p>
-          <a href="{% static 'rec-registration-instructions.pdf'%}" class="btn btn-primary btn-lg">Register</a>
-        </div>
+        <a href="{% static 'rec-registration-instructions.pdf'%}" class="btn btn-primary btn-lg">Register</a>
       </div>
     </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">COMP TEAM</h3>
-          <p class="card-text">We accept new Comp Team members at the beginning of each school year.
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">COMP TEAM</h3>
+        <p class="card-text">We accept new Comp Team members at the beginning of each school year.
             If you’d still like to be a part of Cal Figure Skating this year, we encourage you to join our Rec Team!</p>
-          <!-- <a href="#" class="btn btn-primary">Register</a> -->
-        </div>
+        <!-- <a href="#" class="btn btn-primary">Register</a> -->
       </div>
     </div>
   </div>
