--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -1,10 +1,6 @@
 
-.container {
-  align-items: center;
-  width: 100%;
-}
-
 .form-grid {
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
