--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,7 +1,28 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{%static 'css/gallery.css' %}" />
 
   <h1> GALLERY </h1>
+
+  <div id="gallery-carousel" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{% static 'images/slidertwo.jpg'%}" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'images/slidertwo.jpg'%}" alt="Second slide">
+    </div>
+  <a class="carousel-control-prev" href="#gallery-carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#gallery-carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
 
 {% endblock %}
