--- a/team/templates/team/team.html
+++ b/team/templates/team/team.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'team/css/style.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'team/css/team.css' %}" />
 
 <div class="page-header">
   <h1> MEET THE TEAM </h1>
