--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -2,37 +2,34 @@
 
 {% block content %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{%static 'css/gallery.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'gallery/css/gallery.css' %}" />
 
   <h1> GALLERY </h1>
 
-  <div id="gallery-carousel" class="carousel slide" data-ride="carousel">
-    {% if first_photo %}
-    <div class="carousel-inner">
-
-      <!-- First gallery photo to show must have "active" class -->
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="/gallery{{ first_photo.image_file.url }}" alt="First slide">
-      </div>
-
-      {% for photo in rest_of_photos %}
-      <div class="carousel-item">
-        <img class="d-block w-100" src="/gallery{{ photo.image_file.url }}" alt="Second slide">
-      </div>
+<div id="gallery" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+      {% for photo in photos %}
+        {% if forloop.first %}
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="/gallery{{ photo.image.url }}" alt="">
+          </div>
+        {% else %}
+          <div class="carousel-item">
+            <img class="d-block w-100" src="/gallery{{ photo.image.url }}" alt="">
+          </div>
+        {% endif %}
       {% endfor %}
-
-      <!-- Left and Right carousel buttons -->
-      <a class="carousel-control-prev" href="#gallery-carousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#gallery-carousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-
     </div>
-    {% endif %}
-  </div>
+
+  <a class="carousel-control-prev" href="#gallery" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#gallery" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
 
 {% endblock %}
