--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 {% load static %}
+{% load thumbnail %}
 <link rel="stylesheet" type="text/css" href="{% static 'gallery/css/gallery.css' %}" />
 
   <h1> GALLERY </h1>
@@ -11,13 +12,18 @@
       {% for photo in photos %}
         {% if forloop.first %}
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/gallery{{ photo.image.url }}" alt="">
-          </div>
         {% else %}
           <div class="carousel-item">
-            <img class="d-block w-100" src="/gallery{{ photo.image.url }}" alt="">
-          </div>
         {% endif %}
+        <!--<img class="d-block w-100" src="/gallery{{ photo.image.url }}" alt="">-->
+        <img src="{% thumbnail photo.image '700' as im %}{{ im.url }}{% endthumbnail %}"
+        srcset=
+        "{% thumbnail photo.image '900' as im %}  {{ im.url }} {{ im.x }}w{% endthumbnail %},
+        {% thumbnail photo.image '700' as im %}  {{ im.url }} {{ im.x }}w{% endthumbnail %},
+        {% thumbnail photo.image '340' as im %}  {{ im.url }} {{ im.x }}w{% endthumbnail %}"
+        sizes=
+        "(min-width: 1200px) 800px, (min-width: 768px) 768px, 100vw"/>
+      </div>
       {% endfor %}
     </div>
 
@@ -30,6 +36,5 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-
 
 {% endblock %}
