--- a/static/css/base.css
+++ b/static/css/base.css
@@ -35,6 +35,12 @@ h1 {
   background-color: #424242;
 }
 
+.btn-primary:hover {
+  background-color: #FEC52E;
+  color: #191F2F;
+  font-weight: bolder;
+}
+
 textarea, input {
   border: 1px solid gray;
 }
@@ -45,28 +51,71 @@ textarea:focus, input:focus {
 
 /*** Nav Bar ***/
 
-header {
-  display: flex;
+.navbar {
   border-bottom: 2px solid gray;
-  align-items: center;
-  justify-content: flex-end;
   background-color: #191F2F;
 }
 
-nav a {
-  color: #FFFFFF;
+.nav-item {
+  margin: 0.2em;
+}
+
+#calfs-nav-link {
+  color: #FAFAFA;
   font-size: 20;
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-nav a:hover {
-  color: #FFFFFF;
+.navbar-toggler {
+  margin-right: 1em;
 }
 
-.logo {
-  margin-right: auto;
-  margin-left: 1em;
+.custom-toggler.navbar-toggler {
+    border: 1.5px solid rgb(220,220,220);
+    padding: 3px 6px;
 }
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(220,220,220)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+/* Nav hover effects by Mahesh Ambure https://codepen.io/maheshambure21/pen/QwXaRw */
+
+#calfs-nav-link,
+#calfs-nav-link:after,
+#calfs-nav-link:before {
+  transition: all .5s;
+}
+#calfs-nav-link {
+  position:relative;
+  z-index: 1;
+}
+#calfs-nav-link:hover {
+  color: #191F2F;
+  font-weight: bold;
+}
+#calfs-nav-link:after {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
+  height: 1px;
+  content: '.';
+  color: transparent;
+  background: #FEC52E;
+  visibility: none;
+  opacity: 0;
+  z-index: -1;
+}
+#calfs-nav-link:hover:after {
+  opacity: 1;
+  visibility: visible;
+  height: 100%;
+}
+
+/*** Footer ***/
 
 footer {
   text-align: center;
