--- a/team/static/team/css/team.css
+++ b/team/static/team/css/team.css
@@ -49,7 +49,7 @@ Light Gray: #CECECE
   flex-wrap: wrap;
   justify-content: center;
   margin-top: -0.5em;
-  background: #E5E5E5;
+  background: #EFEFEF;
   padding: 1.5em 0;
   border-top: 2px solid gray;
 }
