--- a/templates/join.html
+++ b/templates/join.html
@@ -5,7 +5,7 @@
 
   <h1> JOIN US </h1>
   <div class="card-deck">
-    <div class="card">
+    <div class="card join-card">
       <div class="card-body">
         <h3 class="card-title">REC TEAM</h3>
         <p class="card-subtitle">No experience necessary!</p>
@@ -15,7 +15,7 @@
         <a href="{% static 'rec-registration-instructions.pdf'%}" class="btn btn-primary btn-lg">Register</a>
       </div>
     </div>
-    <div class="card">
+    <div class="card join-card">
       <div class="card-body">
         <h3 class="card-title">COMP TEAM</h3>
         <p class="card-text">We accept new Comp Team members at the beginning of each school year.
