--- a/static/css/join.css
+++ b/static/css/join.css
@@ -1,13 +1,20 @@
-.card-deck {
-    margin: 5em;
+
+.join-page-body {
 }
 
-.card {
-  background: #CECECE;
+.card-deck {
+    background-image: url(../images/team-group-photo.jpg);
+    padding: 4em 2em;
+    margin: 0;
+}
+
+.join-card {
+  background: rgba(250, 250, 250, 0.9);
   border-radius: 0;
   border: none;
   text-align: center;
   padding: 1em;
+  min-width: 25em;
 }
 
 .card-title {
