--- a/templates/about.html
+++ b/templates/about.html
@@ -3,13 +3,10 @@
 {% block content %}
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}" />
-
-  <h1> ABOUT US </h1>
-
 <div class="about-page-body">
   <img src="{% static 'images/IMG_3334.jpg'%}" class="about-img">
-
   <div class="about-text">
+    <h1 class="title"> ABOUT US </h1>
     <p>Cal Figure Skating welcomes members from all backgrounds, from those trying skating for the first time
     to experienced competitors looking to continue their skating careers in college. No experience is required!</p>
     <p>Our competitive team travels to three sectional intercollegiate competitions each year, and has qualified
