--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed" rel="stylesheet">
 
   <header>
     <!-- Fixed navbar -->
