--- a/team/static/team/css/team.css
+++ b/team/static/team/css/team.css
@@ -6,12 +6,14 @@ Dark Gray: #424242
 Light Gray: #CECECE
 */
 
-.page-header {
-  /*background-image: url(../images/Test2.jpg);
-  background-position: center;*/
-  padding: 1em;
+body {
+  background: #FAFAFA;
 }
 
+.title {
+  margin: 1em;
+  font-size: 2.8em;
+}
 
 /*** Member Card Styles ***/
 
@@ -25,18 +27,18 @@ Light Gray: #CECECE
 }
 
 .card-subtitle {
-  margin-bottom: 16px;
+  margin-bottom: 1em;
   font-weight: bold;
 }
 
 .info-label {
-  font-size: 14;
+  font-size: 0.9em;
   font-weight: bold;
 }
 
 .card-text {
-  margin: 6px;
-  font-size: 14px;
+  margin: 0.4em;
+  font-size: 0.9em;
   line-height: 1.5;
 }
 
@@ -48,19 +50,27 @@ Light Gray: #CECECE
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: -0.5em;
-  background: #EFEFEF;
-  padding: 1.5em 0;
-  border-top: 2px solid gray;
+  margin-bottom: 1em;
 }
 
 .card {
   max-width: 200px;
-  background: #FAFAFA;
+  background: #DEDEDE;
   line-height: 1em;
 }
 
 .member-photo {
   max-width: 100%;
   margin: 0;
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 2.2em;
+    margin-top: 1.2em;
+  }
+
+  .card {
+    max-width: 100%;
+  }
 }
