--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,23 +6,24 @@
 <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" type="text/css" href="{%static 'css/contact.css' %}" />
 
-<h1> CONTACT US </h1>
-
 <div class="form-grid">
 
+<div class="left">
   <!-- Contact Form -->
   <form class="contact-form" method="post">
-    <h4> Contact Us </h4>
+    <h4>CONTACT US</h4>
     {% csrf_token %}
     {{ form.as_p }}
     <input class = "btn btn-primary" type="submit" value="Send"/>
   </form>
+</div>
 
+<div class="right">
   <!-- Mailchimp Signup Form -->
   <div id="mc_embed_signup">
     <form action="https://berkeley.us19.list-manage.com/subscribe/post?u=1095e39c874aef42e64b1a440&amp;id=f112c1208a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div id="mc_embed_signup_scroll">
-	         <h4>Join our Mailing List</h4>
+	         <h4>JOIN OUR MAILING LIST</h4>
 	         <input class="email" id="subscribe-input" type="email" value="" name="EMAIL" placeholder="email address" required>
 
           <!-- To prevent bot signups - do not remove-->
@@ -35,12 +36,13 @@
 
   <!-- Donate -->
   <div class="donate">
-    <h4> Donate </h4>
+    <h4> DONATE </h4>
     <p> Cal Figure Skating is an entirely student-run and student-funded organization.
       We greatly appreciate your support! </p>
     <a href="https://give.berkeley.edu/egiving/index.cfm?Fund=FU1139000" class="btn btn-primary">Donate</a>
   </div>
 
+</div>
 </div>
 
 {% endblock %}
