--- a/templates/join.html
+++ b/templates/join.html
@@ -3,9 +3,8 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{%static 'css/join.css' %}" />
 
-  <h1> JOIN US </h1>
   <div class="card-deck">
-    <div class="card join-card">
+    <div class="card join-card rec-card">
       <div class="card-body">
         <h3 class="card-title">REC TEAM</h3>
         <p class="card-subtitle">No experience necessary!</p>
@@ -15,7 +14,7 @@
         <a href="{% static 'rec-registration-instructions.pdf'%}" class="btn btn-primary btn-lg">Register</a>
       </div>
     </div>
-    <div class="card join-card">
+    <div class="card join-card comp-card">
       <div class="card-body">
         <h3 class="card-title">COMP TEAM</h3>
         <p class="card-text">We accept new Comp Team members at the beginning of each school year.
