--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,22 +1,67 @@
 
+header {
+  margin-bottom: -20em;
+}
+
 .page-body {
   height: auto;
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 1em;
+  font-size: 3em;
 }
 
 .subtitle {
-  padding-top: 1em;
+  padding-top: 2em;
   margin-bottom: -2em;
 }
 
 .title-background {
   background: rgba(250, 250, 250, 0.8);
-  position: absolute;
-  left: 0;
-  top: 9em;
+  position: relative;
+  top: 19em;
   width: 100%;
-  margin: -1em auto;
+  padding-bottom: 0.01em;
 }
 
 .team-photo {
+  min-height: 100%;
   width: 100%;
+  object-fit: cover;
+  object-position: 50% 0;
+}
+
+@media (max-width: 768px) {
+  .title {
+    font-size: 2.5em;
+  }
+  .subtitle {
+    font-size: 1.5em;
+  }
+  header {
+    margin-bottom: -15em;
+  }
+  .title-background {
+    top: 14em;
+  }
+  .team-photo {
+    height: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 2em;
+  }
+  .subtitle {
+    font-size: 1.2em;
+  }
+  header {
+    margin-bottom: -12em;
+  }
+  .title-background {
+    top: 11em;
+  }
 }
