--- a/static/css/join.css
+++ b/static/css/join.css
@@ -1,11 +1,10 @@
 
-.join-page-body {
-}
-
 .card-deck {
     background-image: url(../images/team-group-photo.jpg);
-    padding: 4em 2em;
+    padding: 4em auto;
     margin: 0;
+    padding-top: 3em;
+    padding-bottom: 3em;
 }
 
 .join-card {
@@ -14,7 +13,8 @@
   border: none;
   text-align: center;
   padding: 1em;
-  min-width: 25em;
+  min-width: 24em;
+  margin: 1em;
 }
 
 .card-title {
@@ -28,4 +28,10 @@
 
 .btn {
   margin: 1em;
+}
+
+@media (max-width: 768px) {
+  .comp-card {
+    margin-top: 0;
+  }
 }
