ready to deploy

--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/about.css' %}" />
 <div class="about-page-body">
-  <img src="{% static 'images/IMG_3334.jpg'%}" class="about-img">
+  <img src="{% static 'images/about.jpg'%}" class="about-img">
   <div class="about-text">
     <h1 class="title"> ABOUT US </h1>
     <p>Cal Figure Skating welcomes members from all backgrounds, from those trying skating for the first time
