--- a/templates/join.html
+++ b/templates/join.html
@@ -3,7 +3,7 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{%static 'css/join.css' %}" />
 
-  <div class="card-deck">
+  <div class="card-deck justify-content-center">
     <div class="card join-card rec-card">
       <div class="card-body">
         <h3 class="card-title">REC TEAM</h3>
