--- a/static/css/join.css
+++ b/static/css/join.css
@@ -1,10 +1,12 @@
 
 .card-deck {
-    background-image: url(../images/team-group-photo.jpg);
+    background-image: url(../images/join.jpg);
+    background-position: center;
     padding: 4em auto;
-    margin: 0;
+    margin: 0 auto;
     padding-top: 3em;
     padding-bottom: 3em;
+    min-height: 100vh;
 }
 
 .join-card {
@@ -14,7 +16,7 @@
   text-align: center;
   padding: 1em;
   min-width: 24em;
-  margin: 1em;
+  max-width: 30em;
 }
 
 .card-title {
